Fixed offscreen walk, added simple collsion,added radius to player and monster

--- a/src/GameInit.css
+++ b/src/GameInit.css
@@ -1,6 +1,5 @@
 canvas {
     display: block;
     background-color: #000000;
-    margin-left: auto;
-    margin-right: auto;
+  
   }
